--- a/public/driver.html
+++ b/public/driver.html
@@ -338,7 +338,7 @@ let mydatas = {};
         left:0;
         height:100vh;
         width:100vw;
-        
+        display:flex;
         justify-content:center;
         align-items:center;
         z-index:1000;
