--- a/public/driver.html
+++ b/public/driver.html
@@ -44,6 +44,7 @@
      <p id="myName">DRIVER</p>
    </div>
    </div>
+    <div class="thispage">
     <div id="main" class="menu">
       <button id="init_register" class="button_driver" onclick="document.getElementById('register').style.display='flex';document.getElementById('main').style.display='none';">Enregistrer une benne manuellement</button>
     
@@ -84,6 +85,7 @@
         </div>
       </div>
     </div>
+    </div>
     <style>
       body {
           margin: 0;
@@ -103,6 +105,10 @@
         justify-content:space-around;
         width:90%;
         height:90%;
+      }
+      .thispage {
+        top:10vh;
+        height:90vh;
       }
       .form-container {
           background: white;
