--- a/public/driver.html
+++ b/public/driver.html
@@ -109,6 +109,7 @@
       .thispage {
         top:10vh;
         height:90vh;
+        position:absolute;
       }
       .form-container {
           background: white;
