--- a/public/driver.html
+++ b/public/driver.html
@@ -340,10 +340,10 @@ let mydatas = {};
         z-index:1000;
       }
       #resultContainer {
-        position:fixed;
-        top:0;
+        position:absolute;
+        top:10vh;
         left:0;
-        height:100vh;
+        height:90vh;
         width:100vw;
         display:flex;
         justify-content:center;
