--- a/public/admin.html
+++ b/public/admin.html
@@ -635,7 +635,7 @@ benDatas[ben.id] = ben;
         const statusReadable = toread(ben.status);
         console.log(statusReadable);
         document.getElementById('lightPB3').innerHTML =  "<strong>" + statusReadable.charAt(0).toUpperCase() + statusReadable.slice(1) + "</strong> chez <strong>" + "GAEC Chèvre" + "</strong> en <strong>" + "Blé" + "</strong>";
-         popAdresse(ben.latitude, ben.longitude);
+         popAdresse(ben.adresse);
         numon = ben.id;
         console.log(numon);
         document.getElementById('editeurLightBenne').style.display == 'none';
@@ -1312,7 +1312,7 @@ cliDatas[ben.id] = ben;
          document.getElementById('lightPB').textContent = "Client n°" + ben.id; // 
         // document.getElementById('lightPB2').textContent =  "Euréa Coop";
         document.getElementById('lightPB3').innerHTML =  "Contact : <strong>" + ben.phonenumber + "</strong>" ;
-        popAdresse(ben.latitude, ben.longitude);
+        popAdresse(ben.altitude);
         numon = ben.id;
         console.log(numon);
         document.getElementById('editeurLightBenne').style.display == 'none';
