--- a/public/admin.html
+++ b/public/admin.html
@@ -1166,10 +1166,10 @@ let what;
         }, 15000)
       }
 
-      async function popAdresse (latitude, longitude) {
-        document.getElementById('lightPB2').textContent = "Chargement de l'adresse...";
-        const adresse = await fetch(`https://fleuread.onrender.com/osm?coords=${longitude},${latitude}`);
-        document.getElementById('lightPB2').textContent = await adresse.text();
+      async function popAdresse (adresse) {
+      //  document.getElementById('lightPB2').textContent = "Chargement de l'adresse...";
+     //   const adresse = await fetch(`https://fleuread.onrender.com/osm?coords=${longitude},${latitude}`);
+        document.getElementById('lightPB2').textContent = adresse;
       }
     </script>
     <script>
