--- a/public/admin.html
+++ b/public/admin.html
@@ -1312,7 +1312,7 @@ cliDatas[ben.id] = ben;
          document.getElementById('lightPB').textContent = "Client n°" + ben.id; // 
         // document.getElementById('lightPB2').textContent =  "Euréa Coop";
         document.getElementById('lightPB3').innerHTML =  "Contact : <strong>" + ben.phonenumber + "</strong>" ;
-        popAdresse(ben.altitude);
+        popAdresse(ben.adresse);
         numon = ben.id;
         console.log(numon);
         document.getElementById('editeurLightBenne').style.display == 'none';
