--- a/public/admin.html
+++ b/public/admin.html
@@ -615,7 +615,7 @@ async function translateColor (input) {
                   easeLinearity: 0.25 // how linear the animation is
                 });
         const focus = L.marker([position.lat, position.lon]).addTo(map);
-        focus.bindPopup(position.text).openPopup();
+        focus.bindPopup(text).openPopup();
       };
 
       async function getBennes() {
