--- a/public/admin.html
+++ b/public/admin.html
@@ -1613,6 +1613,8 @@ paramDatas[ben.id] = ben;
         if (answer.length > 1) {
         for (const item of answer) {
           const button = document.createElement('div');
+          button.style.backgroundColor = "lightblue";
+          button.style.border = "1px solid black";
           button.style.width = "100 %";
           button.innerHTML = `${item.text}<br>${item.position.lat} ${item.position.lon}`;
           button.onclick = () => {
@@ -1629,7 +1631,7 @@ paramDatas[ben.id] = ben;
         } else {
           focusOn(answer[0].text,answer[0].position);
         }
-        }, 500);
+        }, 900);
       });
     </script>
     <script>
