--- a/public/admin.html
+++ b/public/admin.html
@@ -1642,7 +1642,7 @@ paramDatas[ben.id] = ben;
     <script>
       async function pushPanel(id) {
         const panel = document.getElementById('panelcontent');
-        panel.style.display = "flex";
+        document.getElementById('panel').style.display = "flex";
         const content = {
           id:id,
             offset:offset
