--- a/public/admin.html
+++ b/public/admin.html
@@ -225,6 +225,7 @@
         width:20%;
         height:100%;
         background:grey;
+        flex-direction:column;
       }
       #mapA {
         height:100%;
