--- a/public/admin.html
+++ b/public/admin.html
@@ -186,6 +186,10 @@
         display:flex;
         flex-direction:column;
       }
+
+      #panelcontent {
+        overflow-y:auto;
+      }
       .input_search {
         height:2vh;
         width:25vh;
