--- a/public/admin.html
+++ b/public/admin.html
@@ -81,9 +81,15 @@
           </div>
            <div id="panel_E">
              <div id="panel_E_circle" class="circle">
-            <img id="panel_E_img" src="https://cdn.pixabay.com/photo/2025/05/15/18/28/field-9602521_1280.jpg" alt="photobenne">
+            <img id="panel_E_img" src="https://cdn.pixabay.com/photo/2016/07/26/15/33/soybeans-1543071_1280.jpg" alt="photocereale">
              </div>
             <h1 id="panel_E_h1">Blé</h1>
+          </div>
+          <div id="panel_F">
+            <div id="panel_F_circle" class="circle">
+            <img id="panel_F_img" src="https://cdn.pixabay.com/photo/2012/04/02/12/33/truck-24360_1280.png" alt="photoconduc">
+             </div>
+            <p id="panel_F_p">Posée par MONIER B.</p>
           </div>
         </div>
       </div>
