--- a/public/admin.html
+++ b/public/admin.html
@@ -197,6 +197,20 @@
         padding:1vw;
         background:grey;
       }
+      #panel_A {
+        position:relative;
+        width:100%;
+      }
+      #panel_A_img {
+        width:100%;
+      }
+      #panel_A_h1 {
+        position:absolute;
+        top:50%;
+        left:50%;
+        transform:translate(-50%,-50%);
+        color:white;
+      }
       #map {
         position:fixed;
         top:10vh;
