--- a/public/admin.html
+++ b/public/admin.html
@@ -64,19 +64,19 @@
     <div id="map">
       <div id="panel">
         <button onclick="document.getElementById('panel').style.display='none';  document.getElementById('mapSearch').style.display = 'flex';">Fermer le panneau latéral</button>
-        <div id="panelcontent">
+        <div class="w3-center" id="panelcontent">
           <div id="panel_A">
             <img id="panel_A_img" src="https://cdn.pixabay.com/photo/2025/05/15/18/28/field-9602521_1280.jpg" alt="photobenne">
             <h1 id="panel_A_h1">521</h1>
           </div>
-           <div id="panel_B">
+           <div class="w3-center" id="panel_B">
             <p id="panel_B_p">En dépôt</p>
           </div>
-          <div id="panel_C">
+          <div class="w3-center" id="panel_C">
             <strong><p id="panel_C_p">Ferme des Monts</p></strong>
             <i id="panel_C_i">07 55 99 44 76</i>
           </div>
-           <div id="panel_D">
+           <div class="w3-center" id="panel_D">
             <a id="panel_D_i" href="maps.google.com" target="_blank">29, chemin du lavoir, Périgneux</a>
           </div>
            <div id="panel_E">
