--- a/public/admin.html
+++ b/public/admin.html
@@ -76,6 +76,10 @@
             <strong><p id="panel_C_p">Ferme des Monts</p></strong>
             <i id="panel_C_i">07 55 99 44 76</i>
           </div>
+          <div class="w3-center" id="panel_V">
+            <p id="panel_V_p">Aucun signalement de la benne</p>
+            <p id="panel_V_pb">Aucun signalement de la ferme</p>
+          </div>
            <div class="w3-center" id="panel_D">
             <a id="panel_D_i" href="maps.google.com" target="_blank">29, chemin du lavoir, Périgneux</a>
           </div>
@@ -90,6 +94,7 @@
             <img id="panel_F_img" src="https://cdn.pixabay.com/photo/2012/04/02/12/33/truck-24360_1280.png" alt="photoconduc">
              </div>
             <p id="panel_F_p">Posée par MONIER B.</p>
+            <p id="panel_F_pb">27/08/2025 à 14h10</p>
           </div>
         </div>
       </div>
