--- a/public/admin.html
+++ b/public/admin.html
@@ -96,6 +96,9 @@
             <p id="panel_F_p">Posée par MONIER B.</p>
             <p id="panel_F_pb">27/08/2025 à 14h10</p>
           </div>
+          <div id="panel_G">
+            <button onclick="window.open('fleuread.onrender.com/historique?type=benne&id=455', '_blank');">Voir l'historique</button>
+          </div>
         </div>
       </div>
       <div id="view">
