--- a/public/admin.html
+++ b/public/admin.html
@@ -66,7 +66,7 @@
         <button onclick="document.getElementById('panel').style.display='none';  document.getElementById('mapSearch').style.display = 'flex';">Fermer le panneau latéral</button>
         <div class="w3-center" id="panelcontent">
           <div id="panel_A">
-            <img class="cropped_image" id="panel_A_img" src="https://cdn.pixabay.com/photo/2025/05/15/18/28/field-9602521_1280.jpg" alt="photobenne">
+            <img class="cropped-image" id="panel_A_img" src="https://cdn.pixabay.com/photo/2025/05/15/18/28/field-9602521_1280.jpg" alt="photobenne">
             <h1 id="panel_A_h1">521</h1>
           </div>
            <div class="w3-center" id="panel_B">
