--- a/public/admin.html
+++ b/public/admin.html
@@ -224,6 +224,17 @@
       object-fit: cover;      /* croppe l'image pour remplir le conteneur */
       object-position: center; /* zone visible centrée */
       }
+
+      #panel_E, #panel_F {
+        display:flex;
+        flex-direction:row;
+        justify-content:space-around;
+      }
+
+       #panel_E_circle, #panel_F_circle {
+        height:100%;
+      }
+      
       #map {
         position:fixed;
         top:10vh;
