--- a/public/admin.html
+++ b/public/admin.html
@@ -403,7 +403,7 @@
         overflow:hidden;
         position:relative;
       }
-       .circle img, .circleB img {
+       .circle img, .circleB img, .circleC img {
         width:100%;
         height:100%;
         object-fit:cover;
