--- a/public/admin.html
+++ b/public/admin.html
@@ -232,7 +232,9 @@
       }
 
        #panel_E_circle, #panel_F_circle {
-        height:100%;
+        height:15vh;
+        align-items:center;
+        width:15vh;
       }
       
       #map {
