--- a/public/admin.html
+++ b/public/admin.html
@@ -229,12 +229,13 @@
         display:flex;
         flex-direction:row;
         justify-content:space-around;
+        align-items:center;
       }
 
        #panel_E_circle, #panel_F_circle {
-        height:15vh;
+        height:10vh;
         align-items:center;
-        width:15vh;
+        width:10vh;
       }
       
       #map {
