--- a/public/admin.html
+++ b/public/admin.html
@@ -93,8 +93,10 @@
             <div id="panel_F_circle" class="circleC">
             <img id="panel_F_img" src="https://cdn.pixabay.com/photo/2012/04/02/12/33/truck-24360_1280.png" alt="photoconduc">
              </div>
-            <p id="panel_F_p">Posée par MONIER B.</p>
+            <div style="display:flex; flex-direction:column">
+            <p id="panel_F_p">Posée par MONIER B.</p><br>
             <p id="panel_F_pb">27/08/2025 à 14h10</p>
+            </div>
           </div>
           <div id="panel_G">
             <button onclick="window.open('fleuread.onrender.com/historique?type=benne&id=455', '_blank');">Voir l'historique</button>
@@ -233,9 +235,9 @@
       }
 
        #panel_E_circle, #panel_F_circle {
-        height:10vh;
+        height:15%;
         align-items:center;
-        width:10vh;
+        width:15%;
       }
       
       #map {
