--- a/public/admin.html
+++ b/public/admin.html
@@ -235,10 +235,18 @@
       }
 
        #panel_E_circle, #panel_F_circle {
-        height:15%;
+        height:25%;
         align-items:center;
-        width:15%;
+        width:25%;
       }
+
+      #panelcontent > div {
+    margin: 0.5rem 0;         /* espace extérieur (haut/bas) */
+    padding: 0.5rem;          /* espace intérieur */
+    border: 1px solid #ccc;   /* fine bordure grise */
+    border-radius: 0.5rem;    /* coins arrondis (optionnel) */
+    background-color: white;  /* fond clair (optionnel) */
+    }
       
       #map {
         position:fixed;
