--- a/public/admin.html
+++ b/public/admin.html
@@ -99,7 +99,7 @@
             </div>
           </div>
           <div id="panel_G">
-            <button onclick="window.open('fleuread.onrender.com/historique?type=benne&id=455', '_blank');">Voir l'historique</button>
+            <button id="panel_G_button" onclick="window.open('fleuread.onrender.com/historique?type=benne&id=455', '_blank');">Voir l'historique</button>
           </div>
         </div>
       </div>
@@ -1756,6 +1756,7 @@ paramDatas[ben.id] = ben;
         document.getElementById('panel_F_img').src = fromServer.k;
         document.getElementById('panel_F_p').textContent = fromServer.i;
         document.getElementById('panel_F_pb').textContent = fromServer.j;
+        document.getElementById('panel_G_button').onclick = `window.open('fleuread.onrender.com/historique?type=benne&id=${fromServer.a}', '_blank');`;
       }
     </script>
   </body>
