--- a/public/admin.html
+++ b/public/admin.html
@@ -283,6 +283,7 @@
         left:15vh;
         width:50vh;
         z-index:2000;
+        flex-direction:column;
       }
       #result_mapSearch {
         max-height:20vh;
