--- a/public/admin.html
+++ b/public/admin.html
@@ -72,6 +72,11 @@
            <div class="w3-center" id="panel_B">
             <p id="panel_B_p">En dépôt</p>
           </div>
+                       <div id="panel_editer">
+                        <button id="editer_a"></button>
+                        <button id="editer_b"></button>
+                        <button id="editer_c"></button>
+                      </div>
           <div class="w3-center" id="panel_C">
             <strong><p id="panel_C_p">Ferme des Monts</p></strong>
             <i id="panel_C_i">07 55 99 44 76</i>
@@ -1751,6 +1756,14 @@ paramDatas[ben.id] = ben;
         document.getElementById('panel_C_i').textContent = fromServer.d;
          document.getElementById('panel_V_p').textContent = fromServer.g;
         document.getElementById('panel_V_pb').textContent = fromServer.h;
+
+document.getElementById('editer_a').textContent = toread("A");
+document.getElementById('editer_a').style.backgroundColor = tocolor("A");
+document.getElementById('editer_b').textContent = toread("B");
+document.getElementById('editer_b').style.backgroundColor = tocolor("B");
+document.getElementById('editer_c').textContent = toread("C");
+document.getElementById('editer_c').style.backgroundColor = tocolor("C");
+        
          document.getElementById('panel_D_i').textContent = fromServer.e;
         document.getElementById('panel_D_i').href = `https://www.google.com/maps?q=${fromServer.o},${fromServer.p}`;
          document.getElementById('panel_E_img').src = fromServer.l;
@@ -1762,6 +1775,7 @@ paramDatas[ben.id] = ben;
           window.open(`https://fleuread.onrender.com/historique?type=benne&id=${fromServer.a}`, '_blank');
           }
         }
+
     </script>
   </body>
 </html>
