--- a/public/admin.html
+++ b/public/admin.html
@@ -81,6 +81,11 @@
             <strong><p id="panel_C_p">Ferme des Monts</p></strong>
             <i id="panel_C_i">07 55 99 44 76</i>
           </div>
+
+                      <div id="farm_input">
+                        <input id="farm_input_search" type="text" placeholder="Entrez un id, nom ou adresse de ferme...">
+                      </div>
+          
           <div class="w3-center" id="panel_V">
             <p id="panel_V_p">Aucun signalement de la benne</p>
             <p id="panel_V_pb">Aucun signalement de la ferme</p>
@@ -94,6 +99,11 @@
              </div>
             <h1 id="panel_E_h1">Blé</h1>
           </div>
+
+                    <div id="cereale_input">
+                        <input id="cereale_input_search" type="text" placeholder="Entrez un code ou nom de céréale...">
+                      </div>
+          
           <div id="panel_F">
             <div id="panel_F_circle" class="circleC">
             <img id="panel_F_img" src="https://cdn.pixabay.com/photo/2012/04/02/12/33/truck-24360_1280.png" alt="photoconduc">
