--- a/public/admin.html
+++ b/public/admin.html
@@ -1854,7 +1854,7 @@ document.getElementById('editer_a').onclick = async () => {
       });
     </script>
     <script>
-         let nowPanel;
+         // let nowPanel;
       const inputA =  document.getElementById('farm_input_search');
       // const resultContainer = document.getElementById('result_mapSearch');
       let thisvalueA;
