--- a/public/admin.html
+++ b/public/admin.html
@@ -1842,7 +1842,7 @@ document.getElementById('editer_a').onclick = async () => {
         } else {
                  const content = {
                 toupd : 'céréale',
-                value_toupd : answer[0].num,
+                value_toupd : answer[0].search,
                 eq:'num',
                 value_eq:nowPanel
               };
@@ -1871,7 +1871,7 @@ document.getElementById('editer_a').onclick = async () => {
         } else {
                  const content = {
                 toupd : 'id_client',
-                value_toupd : answer[0].num,
+                value_toupd : answer[0].search,
                 eq:'num',
                 value_eq:nowPanel
               };
