--- a/public/admin.html
+++ b/public/admin.html
@@ -1128,7 +1128,7 @@ let what;
       setInterval(checkWebSocket, 15*1000);
 
       async function resizeMap () {
-    
+        document.getElementById('mapSearch').style.display = "flex";
         document.getElementById('panel').style.display = "flex";
 
         setTimeout(() => {
